syntax = "proto3";
package pb;
option go_package = "./;pb";

message Pet {
    string id = 1;
    string name = 2;
    string species = 3;
}

message PostPetRequest {
    string name = 1;
}

message PostPetResponse {
    Pet pet = 1;
}

message GetPetRequest {
    string id = 1;
}

message GetPetResponse {
    Pet pet = 1;
}

message GetPetsRequest {
    uint64 skip = 1;
    uint64 take = 2;
}

message GetPetsResponse {
    repeated Pet pets = 1;
}

service PetService {
    rpc PostPet (PostPetRequest) returns (PostPetResponse) {
    }
    rpc GetPet (GetPetRequest) returns (GetPetResponse) {
    }
    rpc GetPets (GetPetsRequest) returns (GetPetsResponse) {
    }
}
